Start work: push, maintaining exactly 1 connection.
* How to wrap comments in vim ('gq<motion>')
* Helpful debug message if the PORT is not defined

--- a/static/battleship_classic.html
+++ b/static/battleship_classic.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>[APP] Land of Risky Clicks</title>
+  <title>Ocean of Stress</title>
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
